Add userType endpoint
