# swagger.json
@@ -2275,11 +2275,6 @@
             "type": "string",
             "description": "Никнейм, которай пользователь ввел при регистрации",
             "example": "soldat2004"
-          },
-          "userType": {
-            "type": "string",
-            "description": "Тип пользователя, может принимать значения 'SOLDIER', 'WAITING_FOR_SOLDIER', 'OTHER'",
-            "example": "SOLDIER"
           }
         }
       },
